# tflite_buf_report

./: CMakeLists.txt  strided_slice.cc  test_strided_slice.py
model/: strided_slice.tflite
